--- a/23_01/07.md
+++ b/23_01/07.md
@@ -3,21 +3,21 @@
 * Githubの登録
   - 環境設定
   - [Git：はじめてのGitとGitHub](https://www.udemy.com/course/intro_git/learn/lecture/6449718#overview)の視聴 (Udemy)
-  - 日課のリポジトリをinit
+  - 日課のリポジトリの作成
 
 
 * MarkDownを使えるようになる
 
 # わかったこと
-* MarkDownの概要やMarkDownの基本的な記法を学んだ
-* コマンドから
+* MarkDownの概要やMarkDownの基本的な記法を学んだ 
+* コマンドを用いてGitの操作をした。 `init` から `push`まで一通りをおこない、Gitでのファイル管理をすることができた。
 
 # 次やること
 - [ウェブ開発入門完全攻略コース \- HTML/CSS/JavaScript\. プログラミングをはじめて学び創れる人へ！ \| Udemy](https://www.udemy.com/course/web-application-development/)の視聴 (セールで購入できなかったらProgate)
   
 
 # 感想
-- アウトプットをするのは、難しい。
+- アウトプットをするのは、難しい。文章力がないのでしっかり身に着けていきたい。
 - .mdというのは、MarkDown記法で記述されているファイルというのをいまさらながら知った。
 - 
 
