--- a/23_01/07.md
+++ b/23_01/07.md
@@ -1,11 +1,8 @@
-
 # 取り組んだ課題
 * Githubの登録
   - 環境設定
   - [Git：はじめてのGitとGitHub](https://www.udemy.com/course/intro_git/learn/lecture/6449718#overview)の視聴 (Udemy)
   - 日課のリポジトリの作成
-
-
 * MarkDownを使えるようになる
 
 # わかったこと
@@ -13,15 +10,16 @@
 * コマンドを用いてGitの操作をした。 `init` から `push`まで一通りをおこない、Gitでのファイル管理をすることができた。
 
 # 次やること
-- [ウェブ開発入門完全攻略コース \- HTML/CSS/JavaScript\. プログラミングをはじめて学び創れる人へ！ \| Udemy](https://www.udemy.com/course/web-application-development/)の視聴 (セールで購入できなかったらProgate)
+* ブログを開設する。
+* [ウェブ開発入門完全攻略コース \- HTML/CSS/JavaScript\. プログラミングをはじめて学び創れる人へ！ \| Udemy](https://www.udemy.com/course/web-application-development/)を購入＆視聴
   
 
 # 感想
-- アウトプットをするのは、難しい。文章力がないのでしっかり身に着けていきたい。
+- アウトプットをするのは、難しい。文章力がないので書くことを習慣化してしっかり身に着けていきたい。
 - .mdというのは、MarkDown記法で記述されているファイルというのをいまさらながら知った。
-- 
+- Githubの使い方を日報の提出をきっかけに一から学ぶことができ、できなかったことができるようになれて非常に有益だった。
 
 # 勉強時間
-今日: 4h
+Today: 6 h
 
-累計: 4h
+Total: 6 h
