--- a/23_01/07.md
+++ b/23_01/07.md
@@ -17,7 +17,7 @@
 # 感想
 - アウトプットをするのは、難しい。文章力がないので書くことを習慣化してしっかり身に着けていきたい。
 - .mdというのは、MarkDown記法で記述されているファイルというのをいまさらながら知った。
-- Githubの使い方を日報の提出をきっかけに一から学ぶことができ、できなかったことができるようになれて非常に有益だった。
+- Gitの使い方を日報の提出をきっかけに一から学ぶことができ、できなかったことができるようになれて非常に有益だった。
 
 # 勉強時間
 Today: 6 h
