--- a/23_01/12.md
+++ b/23_01/12.md
@@ -1,5 +1,5 @@
 # 取り組んだ課題
-* vimの基本を理解する Web技術の基本を学ぶ
+* vimの基本を理解する
 
 # わかったこと
 * vimの基本操作やパッケージ導入の仕方などを学んだ
@@ -8,7 +8,7 @@
 * vimの基本を理解するの続き
   
 # 感想
-* 保存, Insertなどの基本操作は見なくてもできるようになったが、まだ操作が
+* 保存やモード切替など基本操作は見なくてもできるようになったが、
   体に染みついていないのでVSCodeなどでもVimのプラグインなどを使っていきたい。
   
 # 勉強時間
