日報 23/01/14 一部修正

--- a/23_01/14.md
+++ b/23_01/14.md
@@ -2,8 +2,7 @@
 * Linuxの基本コマンドを理解する。
 
 # わかったこと
-* tmux の操作方法やプラグインの導入の仕方を理解し、実際に使用している
-  Cmderを拡張することができた。
+*  ファイルの操作の方法や標準入出力の概要と実際の操作を学んだ。
 
 # 次やること
 * Linuxの基本コマンドを理解する。
@@ -11,12 +10,12 @@
  * [Linucの問題集](https://www.udemy.com/course/unscared_linux/learn/lecture/16858868#content)の `最強Web問題集` を全問正解する
   
 # 感想
-* vimの操作だけでなく、Linuxの操作も扱い始めて、まだ不自由だが
- しっかり向き合って扱いに慣れていくように積極的に使っていきたいと思います。 
+* Linuxを使うと自然と基本コマンドを理解できるので、継続的にCmderでまずは使っていこうと思った。
+* 問題集の回答の解説が非常に参考になる。
   
 # 勉強時間
-Today: 4 h
+Today: 5 h
 
-Total: 28.5 h
+Total: 29.5 h
 
 
