日報 23/01/14 一部修正2

--- a/23_01/14.md
+++ b/23_01/14.md
@@ -6,7 +6,7 @@
 
 # 次やること
 * Linuxの基本コマンドを理解する。
- * Input教材の視聴 ([Udemy](https://www.udemy.com/course/unscared_linux/learn/lecture/16858868#content)
+ * Input教材の視聴 ([Udemy](https://www.udemy.com/course/unscared_linux/learn/lecture/16858868#content))
  * [Linucの問題集](https://www.udemy.com/course/unscared_linux/learn/lecture/16858868#content)の `最強Web問題集` を全問正解する
   
 # 感想
