--- a/23_01/15.md
+++ b/23_01/15.md
@@ -12,7 +12,7 @@
 * input動画の視聴を完了する。課題提出用リポジトリを作成する。
 
 # 感想
-* Gitのブランチやマージなどの基礎的な内容をしっかり勉強できた。
+* Gitのブランチやマージなどの基礎的な内容をしっかり勉強できた。コマンドで入力した後の内容も読めるようになってきた。
 * Linuxの知識量は、初学者には膨大だが丁寧に覚えていきたい。
   
 # 勉強時間
