--- a/23_01/15.md
+++ b/23_01/15.md
@@ -9,7 +9,7 @@
 # 次やること
 * Linuxの基本コマンドを理解する。
   * [Linucの問題集](https://www.udemy.com/course/unscared_linux/learn/lecture/16858868#content)の `最強Web問題集` を全問正解する
-* input動画の視聴を完了する。課題提出用リポジトリを作成する。
+*  Gitのinput動画の視聴を完了する。課題提出用リポジトリを作成する。
 
 # 感想
 * Gitのブランチやマージなどの基礎的な内容をしっかり勉強できた。コマンドで入力した後の内容も読めるようになってきた。
