--- a/23_01/16.md
+++ b/23_01/16.md
@@ -1,11 +1,12 @@
 # 取り組んだ課題
 * Gitの基本を身に着ける 
- * input動画を視聴完了した。
- * 課題提出用のリポジトリを作成
+  * input動画を視聴完了した。
+  * 課題提出用のリポジトリを作成
 * Linuxの基礎コマンドを理解する input動画を視聴完了した。
 
 # わかったこと
-*  Gitのpull requestや
+*  Gitのpull requestやリベースなど細かい機能を知ることができた。頭の中でツリーをたどり
+  今どういう状況なのかを想像しながらブランチを作れるようになった。
 
 # 次やること
 * Web開発入門の動画を視聴する。(まだ買っていないので前後)
