--- a/23_01/16.md
+++ b/23_01/16.md
@@ -15,7 +15,7 @@
 
 # 感想
 * Gitの基本を一通り理解しコードレビューをする意義やその他細かい操作を理解できた。
-* Linuxの基本の仕組みは理解できたが、コマンドは、使わないと忘れてしまう。こういうのがあったなとすぐに振り返れるようにしたい。:
+* Linuxの基本の仕組みは理解できたが、コマンドは、使わないと忘れてしまう。こういうのがあったなとすぐに振り返れるようにしたい。
   
 # 勉強時間
 Today: 5 h
