--- a/23_01/18.md
+++ b/23_01/18.md
@@ -6,7 +6,7 @@
 # わかったこと
   * CSSを中心に勉強した。
     * 宣言の仕方参照のルールなど基本的な内容がわかった
-    * Flexboxやグリッドなどレイアウトの宣言方法とレイアウトについて理解した。
+    * Flexboxやグリッドなどの宣言方法とレイアウトについて理解した。
   
   
 # 次やること
