23/1/23 日報ファイル追加2

--- a/23_01/23.md
+++ b/23_01/23.md
@@ -3,7 +3,7 @@
  
 
 # わかったこと
-* Dockerは、imageファイルからコンテナを作ることで同じ環境で作業が進められること
+* Dockerは、imageファイルからコンテナを作ることで同じ環境で作業が進められる
 *  `docker run` は、デフォルトのコマンドを実行させるが、 `run` 以降に記載することで変更も可能。
 *  Dockerでの開発するイメージをつかめた。
   
