--- a/23_01/25.md
+++ b/23_01/25.md
@@ -3,18 +3,23 @@
  
 
 # わかったこと
-* 
-* `CMD` は デフォルトコマンドを記載する。 image layerには積みあがらない。
-* `WORKDIR` で 指定したディレクトリに作成することができる。
+* DockerFileのインタラクティブな動作を回避するためにfile内に `-y` を用いる。
+* Hostにコードを置き、コンテナで実行する場合は、Docker run時 `-v` オプションをすると、マウントすることができる。
+* マウントすると、コンテナ内にファイルを追加してもそれは、Hostから生成されたものとなる。
   
 # 次やること
 * Docker 
   * [米国AI開発者がゼロから教えるDocker講座](https://www.udemy.com/course/aidocker/)の視聴(section 13から)
   * `セクション13:応用編第二弾(part1)` :Docker composeを使って超本格Webアプリ開発環境を構築する
+  * Docker 入門 課題
+* Linux 101 問題集 60問正解 
 
 # 感想
-* Dockerの知識もLinuxの知識が必要になってきたので勉強したところは、理解できるがところどころ知らないものあるので調べて頻出するものはしっかり覚えたい。
+* WSL2でDockerを起動していたため、講座とは異なる挙動を一部して大変だったがAWSを用いてコンテナを操作ができた。
+
+* Linuxのコマンドが増えてきたので、仕事の合間にちょこちょこと勉強し始めたが、基本解けないのがショック。問題のレベルが基本らしいのでHCで勉強している中、新しいLinuxコマンドがでてきたら使ってオプションまでおぼえていきたいです。
+
 # 勉強時間
-Today: 4 h
+Today: 6 h
 
 Total: 79 h
