26.md 感想を修正

--- a/23_01/26.md
+++ b/23_01/26.md
@@ -6,16 +6,14 @@
 * Docker-compose は、 key と value　の組み合わせを記載する。 `.yml` ファイルを作成する必要がある。
 * 目的は、複数のコンテナを起動するとき。また、RUNをするときのコマンドが長いときなどに用いる
 * Dockerfile内にGemfileをコピーしていた理由は、
-Gemfileが新しくなった時だけ新しいimageをbuildしたいから。そのために、file内にあらかじめ RUN bundle installを記載する必要がある。
+Gemfileが新しくなった時だけ新しいimageをbuildしたいから。そのために、file内にあらかじめ `RUN bundle install` を記載する必要がある。
 # 次やること
 * Docker 
   * Docker 入門 課題
 
 # 感想
-* WSL2でDockerを起動していたため、講座とは異なる挙動を一部して大変だったがAWSを用いてコンテナを操作ができた。
-
-* Linuxのコマンドが増えてきたので、仕事の合間にちょこちょこと勉強し始めたが、基本解けないのがショック。問題のレベルが基本らしいのでHCで勉強している中、新しいLinuxコマンドがでてきたら使ってオプションまでおぼえていきたいです。
-
+* 昨日と同様WSL絡みでかなり苦戦した。
+* docker-composeで2つの `dockerfile` + `.yml` ファイルを作成すると混乱してしまうが講座にもあった図をしっかり頭の中に浮かべて整理していきたい。
 # 勉強時間
 Today: 5 h
 
