--- a/23_02/14.md
+++ b/23_02/14.md
@@ -1,28 +1,19 @@
 # 取り組んだ課題
-
 * SQL
-  * input本(SQL入門 & 達人) 
-
+   * input本(SQL入門 & 達人)
 # わかったこと
 * 正規系
-  * 第一正規形への変形は、すべての列に一つずつ値が入ること
-  * 第二正規形は、複合主キーを持つ場合、そのテーブル上に部分関数従属をもたず、新たにテーブルを作成し、関数従属の関係をつくること。
-  * 第三正規系は、間接的に関数従属をする推移関数従属をテーブルからもたず、新たにテーブルを作成し、その関数従属の関係を作ること。
-
+   
+   * 第一正規形への変形は、すべての列に一つずつ値が入ること
+   * 第二正規形は、複合主キーを持つ場合、そのテーブル上に部分関数従属をもたず、新たにテーブルを作成し、関数従属の関係をつくること。
+   * 第三正規系は、間接的に関数従属をする推移関数従属をテーブルからもたず、新たにテーブルを作成し、その関数従属の関係を作ること。
 * 多対多のエンティティを関連付けることは、両者のエンティティが共通のキーとなる列を保持していないため原則として、結合は行わない。これを解決するには、多対多の間に互いの主キーを持つ関連実態を挿入することで1対多の関係を保ち続けることができる。
-
 * B-tree インデックスは、木構造でデータを保持しており、さらに平衡木であるため先端のどのリーフもルートからの距離が一定になる。また、カーディナリティが高い列ほどB-treeを採用すべき。
-# 次やること
-
-* SQL 
- * input本を読む
-
-# 感想
-
+次やること
+* SQL
+* input本を読む
+感想
 * 概念の理解とSQLの操作の理解どちらも大事なのでしっかり覚えていきたいです。
-
 # 勉強時間
-
 Today: 4 h
-
 Total: 165 h
