--- a/23_02/19.md
+++ b/23_02/19.md
@@ -1,16 +1,27 @@
 # 取り組んだ課題
+
 * REST
-   * Input教材視聴
+  * Input教材視聴
 
 # わかったこと
-JSONフォーマットの特徴は、
 
-+ テキスト形式
-+ JavaScriptを基にしたフォーマット
-+ XMLに比べてデータ量が減らせる。
-+ オブジェクトは入れ子にできる。
+* JSONフォーマットの特徴は、
+
+  * テキスト形式
+  * JavaScriptを基にしたフォーマット
+  * XMLに比べてデータ量が減らせる。
+  * オブジェクトは入れ子にできる。
+
+* クエリパラメータとパスパラメータの使い分けは、
+
+  * 一意なリソースを表現するのに必要かどうか
+    パスパラメータを利用
+
+  * 省略可能かどうか
+    クエリパラメータを利用
 
 # 次やること
+
 * REST(Inputをみる/課題)
 
 # 感想
